--- a/www/macchine.html
+++ b/www/macchine.html
@@ -143,7 +143,7 @@
 				<a onclick="DoLogout();" class="ui-btn-right">Logout</a>
 			</div>
 			<!-- end header -->
-			<div data-role="content" id="CruscottoContent" class="TextCenter">	
+			<div data-role="content" id="CruscottoContent" class="TextCenter" data-theme="d">	
                 
 			</div><!-- /content -->
             <div data-role="footer" class="ui-bar HeadFootClass" data-position="fixed">
