--- a/www/macchine.html
+++ b/www/macchine.html
@@ -18,6 +18,11 @@
         <script type="text/javascript" src="jquery.mobile-1.3.2/plugins/jqplot.meterGaugeRenderer.min.js"></script>
 		<script type="text/javascript" src="js/global.js"></script>
         <script type="text/javascript" src="js/macchine.js"></script>
+		<script type="text/javascript">
+			window.onerror = function(message, url, lineNumber) {
+				alert("Error: "+message+" in "+url+" at line "+lineNumber);
+			}
+		</script>
         <style>
             /* hardware acceleration for smoother transitions on WebKit browsers */
             .ui-panel-animate.ui-panel:not(.ui-panel-display-reveal),
