--- a/www/macchine.html
+++ b/www/macchine.html
@@ -151,7 +151,7 @@
             <div data-role="footer" class="ui-bar HeadFootClass" data-position="fixed">
                 <div data-role="controlgroup" data-type="horizontal">
                     <a data-role="button" onclick="ShowLoadingOK();doRedirectLocale('macchine.html');" data-icon="back">Indietro</a>
-					<a data-role="button" onclick="ShowLoadingOK();GetServerDate('macchine_false');" data-icon="refresh">Refresh</a>
+					<a data-role="button" onclick="ShowLoadingOK();GetServerDate('macchine_true');" data-icon="refresh">Refresh</a>
                     <a data-role="button" onclick="ShowExitConfirm();" data-icon="delete">Esci</a>
                     <div id="Div3"></div>
                 </div>          
